[package]
name = "rust-tls-duplex-stream"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
keywords = ["tls", "duplex", "stream"]
categories = ["data-structures"]
readme = "README.md"
repository = "https://github.com/AlexanderSchuetz97/rust-tls-duplex-stream"
description = "Full Duplex stream Wrapper around rust-tls"


[dependencies]
rustls = "0.23.16"
defer-heavy = "0.1.0"