[package]
name = "rust-tls-duplex-stream"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
keywords = ["tls", "duplex", "stream"]
categories = ["data-structures"]
readme = "README.md"
repository = "https://github.com/AlexanderSchuetz97/rust-tls-duplex-stream"
description = "Full Duplex stream Wrapper around rust-tls"
rust-version = "1.71.1"

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["std"]}
defer-heavy = "0.1.0"

[dev-dependencies]
rustls-graviola = "0.2.1"